--- a/app/globals.css
+++ b/app/globals.css
@@ -41,6 +41,7 @@
   --radius-md: calc(var(--radius) - 2px);
   --radius-lg: var(--radius);
   --radius-xl: calc(var(--radius) + 4px);
+  --caret-blink:'caret-blink 1.25s ease-out infinite'
 }
 
 :root {
@@ -76,6 +77,7 @@
   --sidebar-accent-foreground: oklch(0.205 0 0);
   --sidebar-border: oklch(0.922 0 0);
   --sidebar-ring: oklch(0.708 0 0);
+  --caret-blink:'caret-blink 1.25s ease-out infinite';
 }
 
 .dark {
@@ -110,6 +112,7 @@
   --sidebar-accent-foreground: oklch(0.985 0 0);
   --sidebar-border: oklch(1 0 0 / 10%);
   --sidebar-ring: oklch(0.556 0 0);
+  --caret-blink:'caret-blink 1.25s ease-out infinite';
 }
 
 @layer base {
@@ -118,5 +121,14 @@
   }
   body {
     @apply bg-background text-foreground;
+  }
+}
+
+@keyframes caret-blink {
+  0%, 100% {
+    transform: rotate(-3deg);
+  }
+  50% {
+    transform: rotate(3deg);
   }
 }
